# gostpass

./: Cargo.toml  README.md
src/: database.rs  gui.rs  main.rs
src/ui/: gostpass.ui
