[package]
name = "gostpass"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"]}
libgost-rs = { git = "https://github.com/glukozka-dev/libgost-rs.git" }
eframe = "0.27"
egui = "0.27"
ron = "0.8"
rfd = "0.14"
rand = "0.8"
arboard = "3.2"